--- a/.github/workflows/f1-winner.yml
+++ b/.github/workflows/f1-winner.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install fastf1==3.4.5
+      - run: pip install fastf1==3.4.5 pandas==2.2.2 numpy==1.26.4 requests-cache==1.2.0
       - run: python tools/f1_winner.py
       - run: |
           git config user.name "github-actions"
