--- a/.github/workflows/f1-winner.yml
+++ b/.github/workflows/f1-winner.yml
@@ -6,8 +6,9 @@ on:
   push:
     paths:
       - tools/f1_winner.py
+
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -16,7 +17,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install fastf1==3.4.5 pandas==2.2.2 numpy==1.26.4 requests-cache==1.2.0
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install fastf1==3.4.5 pandas==2.2.2 numpy==1.26.4 requests-cache==1.2.0
       - run: python tools/f1_winner.py
       - run: |
           git config user.name "github-actions"
