--- a/.github/workflows/f1-winner.yml
+++ b/.github/workflows/f1-winner.yml
@@ -3,19 +3,16 @@ name: Update F1 Winner
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */12 * * *"  
-
-permissions:
-  contents: write
+    - cron: "0 */12 * * *"   
 
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -25,28 +22,19 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install requests==2.32.3
+          pip install fastf1==3.4.5 requests-cache==1.2.0 pandas==2.2.2 numpy==1.26.4
 
       - name: Run updater
-        run: |
-          python tools/f1_winner.py
-          test -s data/latest.json || echo "{}" > data/latest.json
+        run: python tools/f1_winner.py
 
-      - name: Commit JSON to source branch
+      - name: Show JSON (debug)
+        run: cat data/latest.json
+
+      - name: Commit JSON to the current branch
+        if: success()  # only push if updater succeeded
         run: |
           git config user.name "github-actions"
           git config user.email "actions@users.noreply.github.com"
           git add data/latest.json
-          git commit -m "chore: update latest F1 winner [skip ci]" || echo "nothing to commit"
+          git commit -m "data: update latest F1 winner" || echo "no changes"
           git push
-
-      - name: Publish JSON to gh-pages
-        run: |
-          git fetch origin gh-pages || true
-          git worktree add ghp gh-pages || git worktree add ghp origin/gh-pages
-          mkdir -p ghp/data
-          cp -f data/latest.json ghp/data/latest.json
-          cd ghp
-          git add data/latest.json
-          git commit -m "data: update latest.json" || echo "nothing to commit"
-          git push origin HEAD:gh-pages
